<resources>
    <string name="app_name">Togoparts</string>
    <string name="app_id">198306676966429</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tab_main">Main</string>
    <string name="tab_marketplace">Marketplace</string>
    <string name="tab_shortlist_ads">Shortlisteds Ads</string>
    <string name="tab_search">Search</string>
    <string name="or">Or</string>
    <string name="search_sort_by">Sort by:</string>
    <string name="sort_by_1">Price: Lowest</string>
    <string name="sort_by_2">Price: Highest</string>
    <string name="sort_by_3">Posted: Newest</string>
    <string name="sort_by_4">Posted: Oldest</string>
    <string name="sort_bikeshop_1">Nearest to Furthest</string>
    <string name="sort_bikeshop_2">Furthest to Nearest</string>
    <string name="sort_bikeshop_3">A to Z</string>
    <string name="sort_bikeshop_4">Z to A</string>
    <string name="search_decription">Product Description:</string>
    <string name="search_posted_by">Posted by:</string>
    <string name="search_size">Size:</string>
    <string name="search_budget">Budget:</string>
    <string name="search_from">From:</string>
    <string name="search_to">To:</string>
    <string name="search_ad_status">Ad Status:</string>
    <string name="search_marketplace">Marketplace Category:</string>
    <string name="search_bikeshop">Bike Shop</string>
    <string name="search_type">Ad Type:</string>
    <string name="search">Search</string>
    <string name="splash_slogan">Singapore\'s Most Addictive Bicycle Marketplace</string>
    <string name="splash_website">www.togoparts.com</string>
    <string name="time">Time</string>
    <string name="status">Status</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="postedby">Posted by</string>
    <string name="btn_add_shortlist">Shortlist Ad</string>
    <string name="remove_shortlist">Remove Shortlist</string>
    <string name="btn_share">Share</string>
    <string name="label_description">Description</string>
    <string name="label_size">Size</string>
    <string name="label_posted_by">Posted by</string>
    <string name="label_all_postby">Search all Ads by %s</string>
    <string name="label_contact_no">Contact No</string>
    <string name="lable_address">Address</string>
    <string name="label_relate">Related Products</string>
    <string name="label_browse_all_ads">Browse All Ads</string>
    <string name="label_add_post">+ Post an ad</string>
    <string name="hint_keyword">Search</string>
    <string name="marketplace">Marketplace</string>
    <string name="search_result">Search Result</string>
    <string name="bikeshop_title">Singapore Bikeshop List</string>
    <string name="filter_title">Filter</string>
    <string name="filter_bikeshop_title">Bikeshop Search</string>
    <string name="shortlist">Shortlisted Ads</string>
    <string name="title_ad_detail">Ad Details</string>
    <string name="btn_reset_filter">Reset</string>
    <string name="itemdeleted">Item deleted</string>
    <string name="taptoundo">Tap to undo</string>
    <string name="no_result_found">No result found</string>
    <string name="no_shortlist">No shortlisted ads</string>
    <string name="apply_filer">Apply Filter</string>
    <string name="apply">Apply</string>
    <string name="new_item">New Item Ads (%s)</string>
    <string name="promos">Promos (%s)</string>
    <string name="filter_bikeshop">Bikeshop / Brand Name</string>
    <string name="hint_bikeshop">Shop Name</string>
    <string name="filter_area">Area</string>
    <string name="filter_opennow">Open Now</string>
    <string name="filter_mechanic">Mechanic Services</string>
    <string name="label_brand">Brands Distributed by %s</string>
    <string name="location">Location</string>
    <string name="view_promos">Promos (%s)</string>
    <string name="view_new_item">New Item Ads(%s)</string>
    <string name="marketplace_search">Marketplace Search</string>
    <string name="bikeshop_promos">Bikeshop Promos</string>
    <string name="bikeshop_search">Bikeshop Search</string>
    <string name="about">Information</string>
    <string name="more">More</string>
    <string name="map">Map</string>
    <string name="title_search_bikeshop">Bikeshop Search Results</string>
    <string name="error">Error</string>
    <string name="label_rating">My Marketplace Rating</string>
    <string name="label_free_ads_posted">Free Ads Posted:</string>
    <string name="label_free_ads_quota">Free Ads Quota:</string>
    <string name="label_free_ads_balance">Free Ads Balance:</string>
    <string name="label_priority_ads_posted">Priority Ads Posted:</string>
    <string name="label_new_items_ads">New Items Ads:</string>
    <string name="label_my_ads">My Ads</string>
    <string name="label_logout">Logout</string>
    <string name="label_login">Login</string>
    <string name="label_skip">Skip</string>
    <string name="label_login_fb">Sign Up or Login Facebook</string>
    <string name="label_login_normal">Or LOGIN using your\n Username and Password</string>
    <string name="label_name">Name:</string>
    <string name="label_email">Email:</string>
    <string name="label_username">Username</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="country">Country:</string>
    <string name="dob">Date of Birth:</string>
    <string name="button_register">Register now</string>
    <string name="label_location">Location</string>
    <string name="label_gender">Gender</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="label_merge">An Existing account in Togoparts matches your email in Facebook Account. Do you want to merge your Togoparts account with Facebook?</string>
    <string name="label_forgot_password">Forgot your password? Log into www.togoparts.com\non your web browser to get it.</string>
    <string name="label_signup">Please provide a username to complete your registration.</string>
    <string name="fb_signup">Facebook Signup</string>
    <string name="merge_account">Merge Account</string>
    <string name="msg_signin">Please login to view your ads</string>
    <string name="title_profile">Manage Ads</string>
    <string name="label_comment">Ad comments</string>
    <string name="label_view_all_comment">View %d more earlier comments</string>
    <string name="note_priority_ad">Sort your item above all Free Ads for 7 days.\n4 Tcreds for all stuff except complete bikes at 10 Tcreds.</string>
    <string name="note_newitem_ad">Make a Profit selling New Items.</string>
    <string name="note_not_postingpack">\n%d Tcreds / day for all item types.</string>
    <string name="note_free_ad">You are posting a Free ad. To get 5x more views and 6 pictures, post as a Priority or New Item Ad.</string>
    <string name="details">Details</string>
    <string name="category">Category</string>
    <string name="item">Item</string>
    <string name="contact_info">Contact Info &amp; Location</string>
    <string name="my_ads_quota">My Ads Quota</string>
    <string name="posting_pack_ads">Posting Pack Ads Information</string>
    <string name="merchant_pack_ads">Merchant Ads Information</string>
    <string name="submit">Submit</string>
    <string name="title_postad">Posting</string>
    <string name="title_all_comment">All Comments</string>
    <string name="title_section">Sections</string>
    <string name="title_category">Category</string>
    <string name="title_sub_category">Sub Category</string>
    <string name="title_price">Price</string>
    <string name="brand">Brand</string>
    <string name="year">Year</string>
    <string name="model">Model</string>
    <string name="ad_title">Ad title</string>
    <string name="ad_discipline">Discipline</string>
    <string name="ad_description">Ad Description</string>
    <string name="title_item_info">Item Info</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="label_condition">Condition</string>
    <string name="label_warranty">Warranty left</string>
    <string name="label_per_ten">/10</string>
    <string name="label_colour">Colour</string>
    <string name="label_weight">Weight</string>
    <string name="label_gram">Grams</string>
    <string name="label_other_links">Other links</string>
    <string name="label_months">Months</string>
    <string name="title_more_ad_detail">More Ad Details</string>
    <string name="label_price">Price</string>
    <string name="label_sgd">SGD:</string>
    <string name="label_firm_neg">Firm / Neg</string>
    <string name="label_original_price">Original price</string>
    <string name="label_clearance">CLEARANCE</string>
    <string name="label_contact_person">Contact Person</string>
    <string name="label_contact_number">Contact Number</string>
    <string name="label_besttime">Best Time to Call</string>
    <string name="title_contact_info">Contact Info</string>
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">        Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">        Location update error. code %1$d message %2$s</string>
    <string name="location_update_missing_update">        Location update error. No incoming location.</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">Can\'t request location updates, previous request hasn\'t finished</string>
    <string name="select_action">Select action</string>
    <string name="msg_repost_confirm">Repost Ad?</string>
    <string name="msg_take_down_confirm">Take Down Ad?</string>
    <string name="msg_refresh_confirm">Refresh Ad?</string>
    <string name="msg_mark_as_sold">Mark ad as %s?</string>
    <string name="msg_purchase">Purchase Tcredits to post this as a %s ad</string>
    <string name="msg_input_title">Ad title is required.</string>
    <string name="msg_input_description">Ad description is required.</string>
    <string name="msg_confirm_cancel_editing">Are you sure you want to cancel editing this Ad? All photos and changes will not be saved.</string>
    <string name="admod_id">/4689451/Android320x50</string>
</resources>