<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/new_actionbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/splash_background"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical" >

                <sg.togoparts.gallery.FontableTextView
                    android:id="@+id/textView2"
                    style="@style/TextAppearance.Search.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_sort_by" />

                <RadioGroup
                    android:id="@+id/group"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:focusable="true"
                    android:paddingLeft="20dp" >

                    <RadioButton
                        android:id="@+id/rbSort1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableRight="@drawable/btn_check"
                        android:focusable="true"
                        android:gravity="left|center_vertical"
                        android:text="@string/sort_by_1" >
                    </RadioButton>

                    <RadioButton
                        android:id="@+id/rbSort2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableRight="@drawable/btn_check"
                        android:gravity="left|center_vertical"
                        android:text="@string/sort_by_2" />

                    <RadioButton
                        android:id="@+id/rbSort3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableRight="@drawable/btn_check"
                        android:gravity="left|center_vertical"
                        android:text="@string/sort_by_3" />

                    <RadioButton
                        android:id="@+id/rbSort4"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableRight="@drawable/btn_check"
                        android:gravity="left|center_vertical"
                        android:text="@string/sort_by_4" />
                </RadioGroup>

                <sg.togoparts.gallery.FontableTextView
                    android:id="@+id/textView5"
                    style="@style/TextAppearance.Search.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_budget" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <sg.togoparts.gallery.FontableTextView
                            style="@style/TextAppearance.Search.Orange"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:gravity="center_vertical"
                            android:text="@string/search_from" />

                        <sg.togoparts.gallery.FontableEditText
                            android:id="@+id/edtFrom"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="numberSigned"
                            android:singleLine="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <sg.togoparts.gallery.FontableTextView
                            style="@style/TextAppearance.Search.Orange"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:gravity="center_vertical"
                            android:text="@string/search_to" />

                        <sg.togoparts.gallery.FontableEditText
                            android:id="@+id/edtTo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="numberSigned"
                            android:singleLine="true" />
                    </LinearLayout>
                </LinearLayout>

                <sg.togoparts.gallery.FontableTextView
                    android:id="@+id/textView3"
                    style="@style/TextAppearance.Search.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="5" >

                    <Spinner
                        android:id="@+id/spnSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />

                    <sg.togoparts.gallery.FontableTextView
                        android:id="@+id/textView4"
                        style="@style/TextAppearance.Search.Orange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/or" />

                    <sg.togoparts.gallery.FontableEditText
                        android:id="@+id/edtValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="numberSigned"
                        android:singleLine="true" />

                    <Spinner
                        android:id="@+id/spnUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5" />
                </LinearLayout>

                <sg.togoparts.gallery.FontableTextView
                    android:id="@+id/textView8"
                    style="@style/TextAppearance.Search.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_type" />

                <Spinner
                    android:id="@+id/spnType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <sg.togoparts.gallery.FontableTextView
                    android:id="@+id/textView6"
                    style="@style/TextAppearance.Search.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_ad_status" />

                <Spinner
                    android:id="@+id/spnAdStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                

                <sg.togoparts.gallery.FontableTextView
                    style="@style/TextAppearance.Search.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_bikeshop" />

                <Spinner
                    android:id="@+id/spnShop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <sg.togoparts.gallery.FontableTextView
                    style="@style/TextAppearance.Search.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_posted_by" />

                <sg.togoparts.gallery.FontableEditText
                    android:id="@+id/edtPostedBy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:singleLine="true" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:paddingTop="10dp"
                    android:paddingBottom="15dp"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/btnReset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_click"
                        android:padding="-10dp"
                        android:text="@string/btn_reset_filter"
                        android:textColor="@android:color/white"
                        android:textSize="20sp " />

                    <Button
                        android:id="@+id/btnApplyFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/btn_click"
                        android:padding="-10dp"
                        android:text="@string/apply_filer"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.doubleclick.PublisherAdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admod_id"
        android:background="@android:color/white" />

</LinearLayout>